// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefCntService With mock cleanup some file: atomicWriteFileRefCnt 1`] = `
{
  "append": undefined,
  "filename": "fileToChange",
  "source": [
    {
      "compressedSize": 4000000,
      "refCount": 5,
      "sha256": "sha256_1",
      "size": 4000000,
    },
    {
      "compressedSize": 4000000,
      "refCount": 2,
      "sha256": "sha256_2",
      "size": 4000000,
    },
  ],
  "type": {
    "fields": {
      "compressedSize": {
        "id": 4,
        "type": "int32",
      },
      "refCount": {
        "id": 2,
        "type": "int32",
      },
      "sha256": {
        "id": 1,
        "type": "bytes",
      },
      "size": {
        "id": 3,
        "type": "int32",
      },
    },
  },
}
`;

exports[`RefCntService With mock cleanup some file: atomicWriteFileUnused 1`] = `
{
  "append": undefined,
  "filename": "unusedPath",
  "source": [
    {
      "compressedSize": undefined,
      "sha256": "sha256_4",
      "size": undefined,
    },
    {
      "compressedSize": undefined,
      "sha256": "sha256_5",
      "size": undefined,
    },
    {
      "compressedSize": 4000000,
      "sha256": "sha256_3",
      "size": 4000000,
    },
    {
      "compressedSize": 4000000,
      "sha256": "sha256_10",
      "size": 4000000,
    },
  ],
  "type": {
    "fields": {
      "compressedSize": {
        "id": 4,
        "options": {
          "proto3_optional": true,
        },
        "type": "int32",
      },
      "sha256": {
        "id": 1,
        "type": "bytes",
      },
      "size": {
        "id": 3,
        "options": {
          "proto3_optional": true,
        },
        "type": "int32",
      },
    },
    "oneofs": {
      "_compressedSize": {
        "oneof": [
          "compressedSize",
        ],
      },
      "_size": {
        "oneof": [
          "size",
        ],
      },
    },
  },
}
`;

exports[`RefCntService With mock cleanup some file: statsService.writeStatistics 1`] = `
[
  PoolStatistics {
    "compressedSize": 8000000n,
    "longestChain": 5,
    "nbChunk": 2,
    "nbRef": 7,
    "size": 8000000n,
    "unusedSize": 8000000n,
  },
  ".",
]
`;

exports[`RefCntService With real file addBackupRefcntTo: statsService.writeStatistics 1`] = `
PoolStatistics {
  "compressedSize": 3744000000n,
  "longestChain": 10,
  "nbChunk": 936,
  "nbRef": 1000,
  "size": 3744000000n,
  "unusedSize": 0n,
}
`;
